--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "antd": "^3.15.0",
     "axios": "^0.18.0",
+    "moment": "^2.24.0",
     "react": "^16.8.4",
+    "react-big-calendar": "^0.20.3",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
