--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "antd": "^3.15.0",
     "axios": "^0.18.0",
+    "fullcalendar": "^3.10.0",
+    "jquery": "^3.3.1",
+    "jquery-ui-bundle": "^1.12.1-migrate",
     "moment": "^2.24.0",
     "react": "^16.8.4",
     "react-big-calendar": "^0.20.3",
